# chatgpt-terminal

./: README.md  pyproject.toml
chatgpt_terminal/: chatgpt_terminal.py
